@@ -17,6 +17,7 @@ systemd System and Service Manager
  	- introduce strv_find_startswith() and make use of it;
  * build:
  	- add check for gperf lookup function signature;
+ 	- add missing include “sys/sysmacros.h” header file;
  * load full selinux db;
  * remove systemd-machine-id-setup program;
  * code optimization;
